# sys_pog

./: CMakeLists.txt  README.md  client.cpp  generate_matrix.cpp  lab2_1.cpp  lab2_2.cpp  lab2_3.cpp  lab3_1.cpp  lab3_2.cpp  lab3_3.cpp  main.cpp  server.cpp
